@@ -83,13 +83,6 @@ DEFNDCATOP_FN (b_r, bool, range, array, array, concat)
 DEFNDCATOP_FN (bm_r, bool_matrix, range, array, array, concat)
 DEFNDCATOP_FN (chm_r, char_matrix, range, char_array, array, concat)
 
-CONVDECL (range_to_float_matrix)
-{
-  CAST_CONV_ARG (const octave_range&);
-
-  return new octave_float_matrix (FloatNDArray (v.array_value ()));
-}
-
 CONVDECL (range_to_matrix)
 {
   CAST_CONV_ARG (const octave_range&);
@@ -128,8 +121,6 @@ install_range_ops (void)
   INSTALL_CATOP (octave_bool, octave_range, b_r);
   INSTALL_CATOP (octave_bool_matrix, octave_range, bm_r);
   INSTALL_CATOP (octave_char_matrix, octave_range, chm_r);
-
-  INSTALL_CONVOP (octave_range, octave_float_matrix, range_to_float_matrix);
 
   // FIXME -- this would be unneccessary if
   // octave_base_value::numeric_assign always tried converting lhs
